--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,38 @@
 *.class
+*.swp
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+#ECIPSE
 
-# Package Files #
-*.jar
-*.war
-*.ear
 *.project 
 *.metadata
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.jar
+*.war
+*.ear
+
+bin/
+tmp/
+
+*.tmp
+*.bak
+*.nib
+.sttings
+.recomendrs
+.externalToolBuilder/
+*.launch
+*.pydevproject
+.cproject
+.autotools
+.factorypath
+.buildpath
+.target
+.tern-project
+.texlipse
+.springBeans
+.recomenders/
+.cache-main
+.scala_dependencies
+.worksheet
+
+
+
